# tldr-code

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  Makefile  README.md  hudqkpass3rofn2tsd7ulgsat7jjuodi.darc  kprrclsrof1utgobgrv9li4ivhgcmuj1  manifest  md3vabuqamo7ief9avs7iibmdnqbdrtf  mifltrstukdg35hhmbl7dbristbvuls3.darc  mkqvde5ra0m9tipnhhg7hdqarfsbbcuo  plleqpr2clgvromh6oumhqfgojlgel27
crates/tldr-cli/: Cargo.toml
crates/tldr-cli/src/: lib.rs  main.rs  output.rs  output_tests.rs
crates/tldr-cli/src/commands/: calls.rs  churn.rs  clones.rs  cognitive.rs  complexity.rs  context.rs  daemon_router.rs  dead.rs  deps.rs  embed.rs  extract.rs  fix.rs  halstead.rs  health.rs  hubs.rs  impact.rs  importers.rs  imports.rs  inheritance.rs  init.rs  loc.rs  mod.rs  references.rs  search.rs  semantic.rs  similar.rs  slice.rs  smells.rs  structure.rs  tree.rs
crates/tldr-cli/src/commands/bugbot/: text_format.rs
crates/tldr-cli/src/commands/contracts/: chop.rs  contracts.rs  dead_stores.rs  invariants.rs  mod.rs  specs.rs  test_recognizer.rs  types.rs  verify.rs
crates/tldr-cli/src/commands/daemon/: activity.rs  cache_stats.rs  daemon.rs  daemon_active.rs  daemon_registry.rs  index_manager.rs  ipc.rs  list.rs  mod.rs  notify.rs  pid.rs  poke.rs  rss.rs  (+9 more)
crates/tldr-cli/src/lifecycle/: launchd.rs  mod.rs  project.rs  service_state.rs
crates/tldr-cli/templates/launchd/: daemon.plist.template
crates/tldr-cli/tests/: api_check_and_patterns_accuracy_v1.rs  bugbot_check_test.rs  cache_upgrade_test.rs  cli_basic_tests.rs  cli_error_clarity_v2.rs  cli_graph_tests.rs  cli_p1_tests.rs  cli_patterns_contracts_tests.rs  cli_quality_tests.rs  cli_remaining_tests.rs  cli_search_context_tests.rs  cli_tests.rs  context_file_func_and_cpp_qualified_v1.rs  context_relative_and_ts_colon_v1.rs  cpp_method_name_extraction_v1.rs  critical_regressions_v1.rs  cross_command_consistency_v1.rs  cross_command_consistency_v3.rs  cross_cutting_and_clear_fix_bugs_v1.rs  cross_language_extraction_v2.rs  daemon_observability_test.rs  daemon_test.rs  definition_workspace_cross_file_v1.rs  deps_and_surface_graceful_degrade_v1.rs  detection_accuracy_v1.rs  determinism_and_stderr_hygiene_v1.rs  docs_and_elixir_dfg_v1.rs  elixir_method_infos_v1.rs  error_handling_and_data_v1_tests.rs  exhaustive_matrix.rs  explain_callers_cross_lang_v1.rs  explain_cross_command_consistency_v1.rs  format_flag_strictness_v1.rs  high_bundle_progress_determinism_coverage_v1.rs  hubs_line_population_v1.rs  hygiene_and_crash_fixes_v1.rs  inheritance_and_dead_cleanup_v1_test.rs  interface_extraction_ocaml_elixir_v1.rs  ipc_message_size_test.rs  l2_daemon_cache_bench_test.rs  (+52 more)
crates/tldr-core/: Cargo.toml
crates/tldr-core/examples/: embed_bench.rs  semantic_eval.rs
crates/tldr-core/src/: config.rs  error.rs  lib.rs  liveness.rs  types.rs  util.rs  walker.rs
crates/tldr-core/src/alias/: solver.rs
crates/tldr-core/src/analysis/: change_impact.rs  dead.rs  deps.rs  hubs.rs  impact.rs  importers.rs  mod.rs  references.rs  whatbreaks.rs
crates/tldr-core/src/ast/: extract.rs  extractor.rs  function_finder.rs  imports.rs  mod.rs  parser.rs
crates/tldr-core/src/callgraph/: builder.rs  builder_v2.rs  cross_file_types.rs  import_resolver.rs  imports.rs  mod.rs  module_index.rs  resolution.rs  scanner.rs  type_resolver.rs  types.rs  var_types.rs
crates/tldr-core/src/cfg/: extractor.rs
crates/tldr-core/src/context/: builder.rs
crates/tldr-core/src/dfg/: extractor.rs
crates/tldr-core/src/diagnostics/: runner.rs
crates/tldr-core/src/fs/: mod.rs  oversize.rs  tree.rs
crates/tldr-core/src/git/: mod.rs
crates/tldr-core/src/inheritance/: cpp.rs
crates/tldr-core/src/metrics/: cognitive.rs  complexity.rs  file_utils.rs  halstead.rs  loc.rs
crates/tldr-core/src/patterns/: language_profile.rs  naming.rs  signals.rs
crates/tldr-core/src/quality/: churn.rs  churn_tests.rs  cohesion.rs  complexity.rs  coverage.rs  dead_code.rs  debt.rs  debt_tests.rs  health.rs  martin.rs  mod.rs  similarity.rs  smells.rs
crates/tldr-core/src/search/: bm25.rs  embedding_client.rs  enriched.rs  hybrid.rs  mod.rs  text.rs  tokenizer.rs
crates/tldr-core/src/security/: ast_utils.rs  taint.rs  taint_tests.rs  vuln.rs
crates/tldr-core/src/semantic/: cache.rs  chunker.rs  embedder.rs  enrichment.rs  index.rs  mod.rs  similarity.rs  store_search.rs  types.rs  vector_store.rs
crates/tldr-core/src/ssa/: construct.rs
crates/tldr-core/src/surface/: csharp.rs  elixir.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  ruby.rs  rust_lang.rs  scala.rs  swift.rs  triggers.rs  typescript.rs
crates/tldr-core/src/types/: inheritance.rs
crates/tldr-core/src/wrappers/: todo.rs
crates/tldr-core/tests/: bench_quality_multilang.rs  bench_remaining_multilang.rs  bench_surface_search_multilang.rs  canonical_function_count_v1.rs  cfg_tests.rs  definition_info_test.rs  field_extraction_test.rs  fs_tests.rs  inheritance_tests.rs  language_parity_test.rs  language_profile_tests.rs  metrics_tests.rs  quality_tests.rs  rr_baseline_per_language_test.rs  rr_framework_integ_test.rs  rr_module_function_integ_test.rs  rr_stdlib_integ_test.rs  sanitize_breaks_flow_ast_only_harness.rs  sanitize_breaks_flow_per_language.rs  search_tests.rs  security_tests.rs  semantic_tests.rs  session15_metrics_tests.rs  types_base_tests.rs  val001a_taint_substring_shadowing_test.rs  val002_cfg_break_ssa_params_test.rs  val002_member_access_structural_test.rs  val002_whatbreaks_affected_tests_test.rs  val010_change_impact_git_path_test.rs
crates/tldr-core/tests/common/: integ_helpers.rs
crates/tldr-daemon/: Cargo.toml
crates/tldr-daemon/src/: state.rs
crates/tldr-daemon/src/handlers/: ast.rs  security.rs
crates/tldr-daemon/tests/: path_traversal_test.rs  val004_cache_oncecell_test.rs
crates/tldr-mcp/: Cargo.toml
crates/tldr-mcp/src/: cache.rs  server.rs
crates/tldr-mcp/src/tools/: mod.rs  search.rs
crates/tldr-mcp/tests/: mcp_camelcase_test.rs  mcp_lifecycle_test.rs  mcp_liveness_poke_test.rs  mcp_request_params_test.rs
(+240 files in other folders)
